--- a/trunk/ModelFarowl/src/Vision/Admin.html
+++ b/trunk/ModelFarowl/src/Vision/Admin.html
@@ -7,13 +7,17 @@ and open the template in the editor.
 <html>
     <head>
         <title> 
-            FAROWL </title>
+            FAROWL- Administração</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
     </head>
     <body>
         <div>Oi eu sou goku</div>
         <img src="../../../trunk/Goku149.jpg" width="320" height="409" alt="Goku149"/>
+        <input type="text" name="Login" value="" size="20" />
+        <input type="password" name="Senha" value="" />
+        <input type="submit" value="Entrar" />
 
     </body>
+
 </html>
